# langgraph-up-react

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  README_CN.md  ROADMAP.md  STREAMING_GUIDE.md  cli_chat.py  direct_graph_call.py  example_client.py  multi_turn_chat_example.py  pyproject.toml  simple_chat.py  streaming_client.py  test_enhanced_streaming.py  test_fix_async.py  test_streaming_chat.py  test_streaming_simple.py
.github/workflows/: claude-code-review.yml  claude.yml  integration-tests.yml
conversations/: 1432a565-55df-43c1-ba6d-9fbcfe4a0bf5.json  153b8b05-b028-4d5c-a341-81b05705d872.json  58f0ea74-b1db-4c07-8745-7f7381c475dd.json  5d5c6d85-aee5-41d2-b186-de4a03fe236b.json  da87eb62-d33a-46b6-8341-001efeaeb9be.json  f799772a-2faf-4f79-bfb3-35caa2ecda29.json  fde4063a-0805-4726-be08-b9fe9851cd22.json
demo_conversations/: 02316054-d847-418c-b474-9d7552b68af5.json  52125d7d-3689-4803-b78c-7f4bd7cf2b17.json  a363e787-12ee-4b61-83b1-5ded0609425c.json
src/common/: __init__.py  context.py  conversation.py  conversation_manager.py  enhanced_streaming.py  mcp.py  models.py  prompts.py  streaming_wrapper.py  tools.py  utils.py
src/common/models/: __init__.py  siliconflow.py
src/rag/: README.md  __init__.py  benchmark.py  config.py  config.yml  llm_server.py  rag.py  ragflow.py
src/react_agent/: graph.py  state.py
tests/: conftest.py  test_data.py
tests/e2e_tests/: __init__.py  test_deepwiki.py  test_react_agent.py  test_react_agent_e2e.py  test_siliconflow.py
tests/evaluations/: README.md  __init__.py  config.py  conftest.py  graph.py  multiturn.py  utils.py
tests/integration_tests/: test_deepwiki.py  test_graph.py  test_models.py
tests/unit_tests/: test_configuration.py  test_deepwiki_tools.py  test_error_handling.py  test_mcp.py  test_models.py  test_tools.py
tests/unit_tests/common/: test_basemodel.py
